@@ -1,0 +1,1 @@
+declare f as function (x as array constant of int) returning void
